[package]
name = "rust-cargo-neo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.4", features = ["sqlite"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }

[lib]
name = "mylib"
crate-type = ["cdylib"]
