[package]
name = "rust-cargo-neo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ffi = "0.5.0"
lazy_static = "1.4.0"
safer-ffi = "0.1.5"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

[lib]
name = "mylib"
crate-type = ["cdylib"]
